--- a/Journal/Daily/2024-07-04.md
+++ b/Journal/Daily/2024-07-04.md
@@ -10,38 +10,78 @@ auteur:
 
 ## Summary of yesterday's entry
 
-Yesterday, I had patat for dinner and rated the day a 4. In the morning, I woke up late and worked from home, which continued into the afternoon. After work, I watched a movie and later spent the evening on YouTube. Reflecting on the day, I realized I felt unaccomplished despite being busy and recognized a need to work on my motivation. Plans for today include a meeting with my manager and clearing out more of my grandma's house.
+Yesterday, I had patat for dinner and rated the day a 4. I woke up late in the morning and worked from home, which continued into the afternoon. After work, I watched a movie and spent the evening on YouTube. Reflecting on the day, I realized I felt unaccomplished despite being busy and recognized a need to work on my motivation. Plans for today include a meeting with my manager and clearing out more of my grandma's house.
 
 ## Questions about yesterday
 
-1. You mentioned working from home in both the morning and afternoon. Can you describe what specific tasks or projects you worked on and how effective you felt you were in completing them?
- 
-2. In your reflections, you expressed a sense of dissatisfaction with your productivity and motivation. Can you elaborate on what your specific goals for the day were and which ones you felt you didn't achieve? Do you have any ideas on how you can improve your motivation going forward?
+> You mentioned working from home in both the morning and afternoon. Can you describe what specific tasks or projects you worked on and how effectively you felt you completed them?
 
-3. Your plans for tomorrow involve a meeting with your manager and clearing out your grandma's house. What are your key objectives for the meeting, and are there any particular challenges you anticipate while clearing out your grandma's house?
+I wanted to continue working on the dart gitjournal project. Or sort out my defqon photos.
+
+but instead, I Progresiworked on OSM by doing some maproulette tasks
+ 
+> In your reflections, you expressed dissatisfaction with your productivity and motivation. Can you elaborate on your specific goals for the day and which ones you felt you didn't achieve? Do you have any ideas on improving your motivation in the future?
+
+My goal is to have one of the projects finished. 
+
+I think that there are at least three things that I need to consider.
+
+1. If you spend all your energy during the weekend, you have no energy left during the week. 
+	- in this case, Defqon was both physically and mentally existing
+2. Don't underestimate the size of a task.
+		- the dart project is in a language that I don't even know. and I don't know enough about git
+		- sorting out the photos is a huge task that will take several evenings
+3. you can force yourself to do more when you can even do what you are doing.
+
+> Your plans for tomorrow involve a meeting with your manager and clearing out your grandma's house. What were the results of this meeting
+
+I confirmed that Alten is going to pay for my temporary psychologist.
+
+I told her I liked the assignment from Deltares.
+
+I got instructions on what to do during my Idle time.
 
 ## What happened today?
 
-**What did you have for dinner**: 
-**Grade for the day**: 
+**What did you have for dinner**: Double mc tasty menu
+**Grade for the day**: 6
 
 ## What did you do today?
 
-**Morning**: 
-**Afternoon**: 
-**After work**: 
-**Evening**: 
+**Morning**: Lazy morning with a sudden transition of needing to come in for work
+**Afternoon**: Writing on my resume, I Got my first glimpses at the code of a potential new project.
+**After work**: driving to my grandma's house
+**Evening**: bringing wood and other stuff to the dump
 
 ## Reflections
 
-1. Reflecting on the previous day's feelings, how did the day go for you today in terms of emotional awareness? Were there moments you identified and actively acknowledged your feelings? Describe them.
+1. Reflecting on the previous day's feelings, how did the day go for you today regarding emotional awareness? Were there moments you identified and actively acknowledged your feelings? Describe them.
 
-2. Identify and celebrate one thing from today that you are proud of, no matter how big or small. Why does this accomplishment make you feel proud?
+I did not feel any strong emotions today.
 
-3. Considering your goal to be more egotistical in a positive way, did you make any choices today where you prioritized your own needs or desires? How did that action impact your sense of self?
+3. Identify and celebrate one thing from today that you are proud of, no matter how big or small. Why does this accomplishment make you feel proud?
+I got a proposed for a new project. People liked me for it, so now it is in the final stages.
 
-4. Did you engage in an activity that felt worthwhile or fulfilling today? How did it compare to yesterday, and what impact did it have on your overall mood and sense of accomplishment?
+5. Considering your goal to be more egotistical in a positive way, did you make any choices today where you prioritized your own needs or desires? How did that action impact your sense of self?
+The meeting with my manager was nearly postponed until next week. But I told her that I would rather have it today because I felt it was important to address the matters at hand promptly.
 
-5. Based on today's experiences, what is one actionable step you can take tomorrow to improve your motivation and continue progressing toward your goals?
+This made her plan the meeting at 11. It made me feel important to her, which in turn boosted my self-worth and confidence.
 
+(this change was at 1015, which meant I had 45 min to get out of the house and do a 35 min drive)
+
+6. Did you engage in a worthwhile or fulfilling activity today? How did it compare to yesterday, and how did it impact your overall mood and sense of accomplishment?
+We made a significant impact on Grandma's house. The second floor is now nearly empty, which is a tangible sign of progress and a source of accomplishment for me.
+
+8. Based on today's experiences, what is one actionable step you can take tomorrow to improve your motivation and progress toward your goals?
+I will start on time and set a realistic goal
 ## Plans for Tomorrow
+
+Redraw the late counter on the board.
+
+Figure out what comparison is failing on the gitjournal project.
+
+Read the documentation for the new project.
+
+Read up on the rules of quidditch.
+
+Edit the Kenniskaart text I put down today.
