--- a/Journal/Daily/2024-07-05.md
+++ b/Journal/Daily/2024-07-05.md
@@ -10,49 +10,91 @@ auteur:
 
 ## Summary of yesterday's entry
 
-Yesterday was a moderately productive day, graded a 6. I had a lazy morning but had to rush to work for a sudden meeting, which turned out to be beneficial as I took a stand for a timely discussion with my manager, boosting my self-worth. I spent the afternoon working on my resume and getting acquainted with a potential new project. In the evening, I helped clear out my grandma's second floor, which felt rewarding. I was emotionally neutral throughout the day but proud of my contributions and taking a step towards being more assertive. For tomorrow, I plan to start on time and set specific goals, including tasks for both current and new projects, and personal interests.
+Yesterday was a moderately productive day, graded a 6. I had a lazy morning but had to rush to work for a sudden meeting, which was beneficial as I took a stand for a timely discussion with my manager, boosting my self-worth. I spent the afternoon working on my resume and getting acquainted with a potential new project. In the evening, I helped clear out my grandma's second floor, which felt rewarding. I was emotionally neutral throughout the day but proud of my contributions and taking a step towards being more assertive. I plan to start on time tomorrow and set specific goals, including tasks for current and new projects and personal interests.
 
 ## Questions about yesterday
 
-1. Can you elaborate on any particular challenges or successes you faced while working on your resume and getting familiar with the new project code? What did you learn from it, and how might it influence your approach moving forward?
+> Can you elaborate on any challenges or successes you faced while working on your resume and getting familiar with the new project code? What did you learn from it, and how might it influence your approach?
 
-2. You mentioned driving to your grandma's house after work and then helping to bring wood and other stuff to the dump. Can you describe the significance of this activity and how it impacted your evening emotionally or mentally?
+The biggest challenge working on my resume was summarizing what I did for the project without over-stating my involvement (although I was very involved with the whole project)
 
-3. Reflecting on your goal to be more egotistical in a positive way, how did the interaction with your manager and the successful rescheduling of the meeting at 11 affect your perception of your professional relationships and your approach to voicing your needs?
+Another challenge with the resume was writing it in an appealing way. But I got chatGPT to help me with that.
+
+> You mentioned driving to your grandma's house after work and then helping to bring wood and other stuff to the dump. Can you describe the significance of this activity and how it impacted your evening emotionally or mentally?
+
+I'm not attached to my gramas stuff as it has no material value to me.
+I also did not create an emotional investment into the house as I spend only afternoons there.
+I never had a sleepover or any huge emotions attached to the house.
+
+I'm kind of sad that I never slept over at any of my grandparents. I get how it was impractical with the distance, and I never wanted to miss scouting.
+I wonder what my grandparents thought of this.
+
+>Reflecting on your goal to be more egotistical in a positive way, how did the interaction with your manager and the successful rescheduling of the meeting at 11 affect your perception of your professional relationships and your approach to voicing your needs?
+
+I was only thinking of her being busy. And my time was worthless as I had nothing else to do.
+
+But I had real questions for the meeting that were time-sensitive.
+My manager stated that she likes to take time for her consultants.
 
 ## What happened today?
 
-**What did you have for dinner**: 
-**Grade for the day**: 
-**Were you on time for work?**:
+**What did you have for dinner**: chili con carne (vega meat)
+**Grade for the day**: 7
+**Were you on time for work?**: No
 
 
 ## What did you do today?
 
-**Morning**: 
-**Afternoon**: 
-**After work**: 
-**Evening**: 
+**Morning**: I had a meeting with my team lead, who introduced me to my new project
+**Afternoon**: I looked into the code and Started on some major refactoring
+**After work**: clean some windows
+**Evening**: watched the movie `Shooter`
 
 ## Reflections
 
 1. Reflecting on the Previous Day:
    - How did starting on time today, compared to yesterday's lazy morning, impact your productivity and emotional state?
+I still did not have a great start to the morning. But as I started going and going to work, I became more motivated by the coming project.
+
+So I learned from this that I need a combination of doing what the timeslot is for and having a great thing to do in it.
+
+Aka, during work hours, I need a great project to work on.
    
 2. Emotional Awareness:
-   - What emotions did you experience today, and how did they differ from being emotionally neutral yesterday? Describe any moments when you felt proud, assertive, or aware of your feelings.
+   - What emotions did you experience today, and how did they differ from being emotionally neutral yesterday? Describe moments when you felt proud, assertive, or aware of your feelings.
+
+I felt excited about and eager to do something for the new project.
 
 3. Self-Pride and Assertiveness:
    - Think about a moment today when you felt proud of yourself. What actions or decisions led to this feeling? How did this compare to the pride you felt standing up for a discussion with your manager yesterday?
+   
+I need little to no help understanding the project because of my experience with web development. This made me feel proud of the skills I developed.
 
 4. Balancing Selflessness and Selfishness:
    - Describe an instance today where you balanced giving to others with taking time for yourself. Did you manage to be more egotistical in a good way compared to yesterday?
 
+Everyone expected me to go to our boss's goodbye party. But I didn't know him well and liked what I was working on, so I stayed behind.
+
+I also don't like the social meetings, although they are the best opportunities to get new work.
+
 5. Daily Worthwhile Deed:
-   - What did you do today that you consider worthwhile? How does this compare to helping clear out your grandma's second floor yesterday? What value did it bring to your day or goals?
+   - What did you do today that you consider worthwhile? How does this compare to helping clear your grandma's second floor yesterday? What value did it bring to your day or goals?
+
+I did not write any code that would go into production. I did like experimenting, and now I have a good idea of what I want to clean up.
 
 ## What did you learn today?
 
-- 
+- That Azure DevOps has an easy npm package manager
+- about my new project
+- about styled components
 
 ## Plans for Tomorrow
+
+Sleep in a little
+
+Actually, read up on the rules of quidditch.
+And get the stuff to play it
+
+Wash the windows.
+
+Maybe look at the Dart gitjournal project
