journaled and added git-crypt

--- a/Journal/Daily/2024-07-06.md
+++ b/Journal/Daily/2024-07-06.md
@@ -1,52 +1,54 @@
 ---
 tags:
-  - Journal
+ - Journal
 created: 2024-07-06
 auteur:
-  - ChatGPT 4-o
-  - Me
+ - ChatGPT 4-o
+ - Me
 ---
 # Journal entry for Saturday, 2024-07-06
 
 ## Summary of yesterday's entry
 
-Yesterday, I had a productive day starting with a meeting introducing me to a new project, then tackled major code refactoring in the afternoon, and spent the evening watching the movie "Shooter." I rated the day a 7, despite not making it to work on time. Emotionally, I felt motivated and proud of my skills due to my solid grasp of the new project, although I skipped a social event to focus on work I enjoyed. I learned about Azure DevOps, my new project, and styled components. For tomorrow, I plan to sleep in, read up on quidditch rules, wash windows, and maybe check the Dart gitjournal project.
+Yesterday, I had a productive day, starting with a meeting introducing me to a new project, then tackling major code refactoring in the afternoon, and watching the movie "Shooter." Despite not making it to work on time, I rated the day a seven. Emotionally, I felt motivated and proud of my skills due to my solid grasp of the new project, although I skipped a social event to focus on the work I enjoyed. I learned about Azure DevOps, my latest project, and styled-components. I plan to sleep in tomorrow, read up on quidditch rules, wash windows, and check the Dart gitjournal project.
 
 ## Questions about yesterday
 
-> You mentioned that you had a meeting with your team lead who introduced you to a new project. Can you elaborate on the scope and objectives of the new project, and how it aligns with your skills and career goals?
+> You mentioned meeting with your team lead, who introduced you to a new project. Can you elaborate on the scope and objectives of the new project and how it aligns with your skills and career goals?
 
-I can not reveail too much because this is a open forum.
+I can not reveal too much because this is an open forum.
 
-but its a web development job where we do maintenance on a crm app.
-I love that I can show what I can do on this project instad of my leaning on the job
+But it's a web development job where we maintain a CRM app.
+I love that I can show what I can do on this project instead of leaning on the job.
 
-> Regarding your decision to stay behind and skip the boss's goodbye party, how did this impact your work and your relationships with your colleagues? Do you think missing such social events might affect your future opportunities at work?
+> Regarding your decision to stay behind and skip the boss's goodbye party, how did this impact your work and your relationships with your colleagues? Would missing such social events affect your future opportunities at work?
 
-I dont know becaue i cant peer in to peoples heads
+I don't know because I can't peer into people's heads
+
 ## What happened today?
 
 **What did you have for dinner**: Patat
 **Grade for the day**: 8
+
 ## What did you do today?
 
-**Morning**: slept in and wached tiktoks
-**Afternoon**: cleaned the front of the house
-**Evening**: cleaned the back of the house and what the quater finals of the EK
+**Morning**: slept in and watched TikTok
+**Afternoon**: Cleaned the front of the house
+**Evening**: cleaned the back of the house and what the quarter-finals of the EK
 
 ## Reflections
 
 1. **Reflection on Feelings**
    - How did you feel throughout today? Identify any moments when your emotions shifted. Were there any specific activities or interactions that stood out to you emotionally?
 
-I feld a new sort of tiredness. I had energy in my body but because my head would not be in the game my body felt sluggish
+I felt a new sort of tiredness. I had energy in my body, but because my head would not be in the game, my body felt sluggish.
 
 2. **Recognizing Achievements**
    - In what ways did you make yourself proud today? Highlight any tasks, moments, or decisions that made you feel accomplished, particularly in line with your goals.
 
-I clean the house which was needed
+I cleaned the house, which was needed.
 
 3. **Balancing Self and Selflessness**
    - Reflect on how you balanced taking for yourself vs. giving to others today. Can you identify any moments where you prioritized your own needs or desires? Was it difficult or easy to do so?
 
-I did not have time to work on my own projects. altough the brake and pysical acctivities were nice.
+I did not have time to work on my projects. However, the break and physical activities were nice.
