--- a/Journal/Daily/2024-07-09.md
+++ b/Journal/Daily/2024-07-09.md
@@ -8,47 +8,37 @@ auteur:
 ---
 # Journal entry for Tuesday, 2024-07-09
 
-## Summary of yesterday's entry
-
-Yesterday, I had spaghetti for dinner and gave the day an overall grade of B. I arrived at work on time. In the morning, I completed a crucial report and in the afternoon attended a productive team meeting. After work, I went for a jog and spent the evening reading a book. Reflecting on the day, I felt particularly accomplished in the morning when I finished the report, but the afternoon felt slightly rushed. I managed to take a short walk for self-care, which was refreshing. I prioritized my needs by taking a full lunch break, which re-energized me. The most worthwhile activities were completing the report and the productive team meeting, both aligning with my professional goals. To improve time management, I used a prioritized to-do list, which proved effective. For tomorrow, my plans include starting a new project and continuing with my reading.
-
-
-
-## Questions about yesterday
-
-1. Can you provide more details about what you did during the different parts of the day (morning, afternoon, after work, evening)? This will help us understand the specific activities that filled your time yesterday.
-
-2. Reflecting on your specific moments of pride or accomplishment yesterday, can you describe any particular achievements or tasks that stood out to you and why they made you feel this way?
-
-3. When considering your self-care actions or barriers, can you elaborate on what self-care activities you engaged in, or what specific challenges or obstacles prevented you from taking time for yourself?
-
 ## What happened today?
 
-**What did you have for dinner**: 
-**Grade for the day**: 
-**Were you on time for work?**:
+**What did you have for dinner**: macaroni
+**Grade for the day**: 6
+**Were you on time for work?**: no 10:15
 
 ## What did you do today?
 
-**Morning**: 
-**Afternoon**: 
-**After work**: 
-**Evening**: 
+**Morning**: mostly checking Reddit
+**Afternoon**: met with the product owner and user of my new project
+**After work**: worked on importing laz files into reality capture
+**Evening**: watched a movie
 
 ## Reflections
 
 1. Reflecting on today, how did you honor and become more aware of your feelings? Were there any moments when you paused to check in with yourself emotionally?
+I had a moment of strong emotions in the eving. Im struggeling with energy the last couple of weeks ever since defqon.
 
-2. What are you most proud of achieving today? Did you notice any significant accomplishments, and how did these make you feel about yourself?
+this escalated tonight in me not having energy to think about what cloths needed to be washed before i go to summercamp in a couple of days.
 
-3. In what ways did you assertively prioritize your own needs and desires over others today? Were there moments where you chose to take for yourself rather than give selflessly?
+this let me to refect on the current state of my life and I am unhappy and sad about it.
+I dont feel like I have everything under control. I feel like I dont have the energy to do any thing.
 
-4. What was the most worthwhile activity you engaged in today, and why did it feel meaningful to you? How does this contribute to your overall sense of fulfillment?
+but then I DO Do a lot of stuff in a day. I had a meeting with new people, I explored a unknown software and mannaged to do something. I walked in the rain.
 
-5. Considering your experiences from today, what strategies or actions can you carry over to tomorrow to help you better achieve your goals?
+and then I remembered that my father also was very buzzy all the time. But it feld like he always had everything under control.
 
-## What did you learn today?
-
-- 
+I miss you dad.
 
 ## Plans for Tomorrow
+
+I need to call back the psychologist for an appointment
+
+first day on the new project
